syntax = "proto3";
package bpfd.v1;
option go_package = "github.com/bpfd-dev/clients/gobpfd/v1;v1";

service Loader {
    rpc Load (LoadRequest) returns (LoadResponse);
    rpc Unload (UnloadRequest) returns (UnloadResponse);
    rpc List (ListRequest) returns (ListResponse);
    rpc PullBytecode (PullBytecodeRequest) returns (PullBytecodeResponse);
    rpc Get (GetRequest) returns ( GetResponse );
}

message BytecodeImage {
    string url = 1;
    int32 image_pull_policy = 2;
    string username = 3;
    string password = 4;
}

message NoLocation{}

message ProgramInfoCommon {
    oneof location {
        NoLocation no_location = 1;
        BytecodeImage image = 2;
        string file = 3;
    } ;
    string name = 4;
    uint32 program_type = 5;
    optional string id = 6;
    map<string, bytes> global_data = 7;
    optional string map_owner_uuid = 8;
}

message KernelProgramInfo { 
    uint32 id = 1;
    uint32 program_type = 2;
    string loaded_at = 3;
    string tag = 4;
    bool gpl_compatible = 5;
    repeated uint32 map_ids = 6;
    uint32 btf_id = 7;
    uint32 bytes_xlated = 8;
    bool jited = 9;
    uint32 bytes_jited = 10;
    uint32 bytes_memlock = 11;
    uint32 verified_insns = 12;
}

message AttachInfo {
    oneof attach_info {
        NoAttachInfo none = 1;
        XDPAttachInfo xdp_attach_info = 2;
        TCAttachInfo tc_attach_info = 3;
        TracepointAttachInfo tracepoint_attach_info = 4;
        KprobeAttachInfo kprobe_attach_info = 5;
        UprobeAttachInfo uprobe_attach_info = 6;
    }
}

message ProgramInfo {
    ProgramInfoCommon common = 1;
    string map_pin_path = 2;
    repeated string map_used_by = 3;
    AttachInfo attach_info = 4;
}

message NoAttachInfo {}

message XDPAttachInfo {
    int32 priority = 1;
    string iface = 2;
    int32 position = 3;
    repeated int32 proceed_on = 4;
}

message TCAttachInfo {
    int32 priority = 1;
    string iface = 2;
    int32 position = 3;
    string direction = 4;
    repeated int32 proceed_on = 5;
}

message TracepointAttachInfo {
    string tracepoint = 1;
}

message KprobeAttachInfo {
    string fn_name = 1;
    uint64 offset = 2;
    bool retprobe = 3;
    optional string namespace = 4;
}

message UprobeAttachInfo {
    optional string fn_name = 1;
    uint64 offset = 2;
    string target = 3;
    bool retprobe = 4;
    optional int32 pid = 5;
    optional string namespace = 6;
}

message LoadRequest {
    ProgramInfoCommon common = 1;
    AttachInfo attach_info = 2;
};

message LoadResponse {
    ProgramInfo info  = 1;
    KernelProgramInfo kernel_info = 2;
}


message UnloadRequest {
    string id = 1;
}

message UnloadResponse {}

message ListRequest {
    optional uint32 program_type = 1;
    optional bool bpfd_programs_only = 2;
}

message ListResponse {
  message ListResult { 
    ProgramInfo info = 1;
    KernelProgramInfo kernel_info = 2;
  }
  repeated ProgramInfo results = 1;
}

message PullBytecodeRequest {
    BytecodeImage image = 1;
}

message PullBytecodeResponse {}

message GetRequest {
    string id = 1;
}

message GetResponse { 
    ProgramInfo program_info = 1;
}
